fix img not showing and adding to home

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding: 0 4.5rem;
+  text-align: center;
 }
 
